--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <ul>
         <li><a href="#Home">Home</a></li>
-        <li><a href="#GridView">Grid Gallery</a></li>
+        <li><a href="#GridGallery">Grid Gallery</a></li>
         <li><a href="#myCarousel">Slide View</a></li>
     </ul>
 
@@ -27,8 +27,8 @@
         </center>
     </section>
     <br>
-    <section id="Grids">
-<h2> Grid gallery</h2>
+    <section id="GridGallery">
+<h2>Grid gallery</h2>
 <br>
 <script src=""></script>
 <div class="row">
